[Wearth1.0] Spring Security 수정 [권서현]

--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -23,15 +23,6 @@
 	<!-- Site Icons -->
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<!-- Site CSS -->
-	<link rel="stylesheet" href="css/style.css">
-	<!-- Responsive CSS -->
-	<link rel="stylesheet" href="css/responsive.css">
-	<!-- Custom CSS -->
-	<link rel="stylesheet" href="css/custom.css">
-
 	<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -50,7 +41,7 @@
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="footer-widget">
 							<a class="navbar-brand" href="/">
-								<img src="main/images/logo.png"
+								<img src="https://ifh.cc/g/TjraG8.png"
 									style="width: 180px; height: 100px; margin-left: 80px; ">
 							</a>
 						</div>
