--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -12,10 +12,14 @@
 	<!--font link end-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-
-	<link rel="stylesheet" href="main/css/main.css">
-	<!-- Bootstrap CSS -->
-
+ <link rel="stylesheet" href="/css/main/main.css">
+ <link rel="stylesheet" href="/css/main/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/main/style.css">
+  <link rel="stylesheet" href="/css/main/responsive.css">
+  <link rel="stylesheet" href="/css/main/custom.css">
+  <link rel="stylesheet" href="/css/main/sidebar.css">
+  <link rel="stylesheet" href="/css/style.css">
+  
 </head>
 
 <body>
