--- a/src/main/resources/templates/userinfo/signup.html
+++ b/src/main/resources/templates/userinfo/signup.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="/css/main/custom.css">
   <link rel="stylesheet" href="/css/main/sidebar.css">
   <link rel="stylesheet" href="/css/styles.css">
-
-
+  <meta name="_csrf_header" th:content="${_csrf.headerName}">
+  <meta name="_csrf" th:content="${_csrf.token}">		
 </head>
 
 <body>
@@ -40,17 +40,20 @@
       
       
       <div class="div-input">
-        <!--로그인 form-->
-      <form class="validation-form" novalidate>
+      <!--로그인 form-->
+      <form method="post" action="/userinfo/signup" id = "form" novalidate>
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <input type="hidden"id="inputRole" name="role" value="user">
         <!--id input-->
         <div class="row mb-1 position-relative">
           <label for="inputId" class="form-label text-start">아이디</label>
           <div class="input-group col">
-            <input type="text" class="form-control input" id="inputId" required >
-            <button class="btn id-check-btn custom-btn">중복확인</button>
+            <input type="text" class="form-control input" id="inputId" name="id" required >
+            <button class="btn id-check-btn custom-btn" type = "button" onclick = "checkId()">중복확인</button>
             <div class="invalid-tooltip">아이디를 입력해주세요.</div>
           </div>
         </div>
+        
         <!--pwd input-->
         <div class="row mb-1 position-relative">
           <div class="div-label row">
@@ -58,42 +61,45 @@
             <div class="text-end detail col-sm-8">8~14자리 사이의 암호를 입력해주세요.</div>
           </div>
           <div class="input-group col">
-            <input type="text" class="form-control input" id="inputPwd" required>
+            <input type="password" class="form-control input" id="inputPwd" name="pwd" required>
             <div class="invalid-tooltip">비밀번호를 입력해주세요.</div>
           </div>
         </div>
+        
         <!--pwd check input-->
         <div class="row mb-1 position-relative">
           <div class="div-label row">
             <label for="inputPwdCheck" class="form-label text-start col-sm-5">비밀번호 확인</label>
-            <div class="text-end detail col-sm-7">비밀번호를 다시 입력해주세요.</div>
+            <div class="text-end detail col-sm-7"><span id = "labelPwdCheck">비밀번호를 다시 입력해주세요.</span></div>
           </div>
           <div class="input-group col">
-            <input type="text" class="form-control input" id="inputPwdCheck" required>
+            <input type="password" class="form-control input" id="inputPwdCheck">
             <div class="invalid-tooltip">비밀번호를 입력해주세요.</div>
           </div>
         </div>
+        
         <!--name input-->
         <div class="row mb-1 position-relative">
           <div class="input-group col">
             <label for="inputName" class="form-label text-start">이름</label>
             <div>
-              <input type="text" class="form-control input" id="inputName" required>
+              <input type="text" class="form-control input" id="inputName" name="u_name" required>
               <div class="invalid-tooltip">이름을 입력해주세요.</div>
             </div>
           </div>
+          
         <!--gender input-->
         <div class="input-group col position-relative">
           <label for="inputGender" class="form-label text-start">성별</label>
           <div class="input-group">
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" id="M">
+                <input class="form-check-input" type="radio" value="M" name="gender">
                 <label class="form-check-label" for="flexRadioDefault1">
                   남성
                 </label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" id="W" checked>
+                <input class="form-check-input" type="radio" value="W" name="gender" checked>
                 <label class="form-check-label" for="flexRadioDefault2">
                   여성
                 </label>
@@ -106,11 +112,12 @@
         <div class="row mb-1 position-relative">
           <label for="inputNickname" class="form-label text-start">닉네임</label>
           <div class="input-group col">
-            <input type="text" class="form-control input" id="inputNickname" required>
-            <button class="btn id-check-btn custom-btn">중복확인</button>
+            <input type="text" class="form-control input" id="inputNickname" name="nickname" required>
+            <button class="btn id-check-btn custom-btn" type = "button" onclick = "checkNickname()">중복확인</button>
             <div class="invalid-tooltip">닉네임을 입력해주세요.</div>
           </div>
         </div>
+        
         <!--phone input-->
         <div class="row mb-1 position-relative">
           <label for="inputPhone" class="form-label text-start">전화번호</label>
@@ -120,32 +127,36 @@
             <input type="text" class="form-control input" id="inputPhone2" required>
             <span style="padding-top: 5px;">&nbsp;&nbsp;-&nbsp;&nbsp;</span>
             <input type="text" class="form-control input" id="inputPhone3" required>
-
+            <input type="hidden" name="phone" id="finalPhone">
             <div class="invalid-tooltip">전화번호를 입력해주세요.</div>
           </div>
         </div>
+        
         <!--email input-->
         <div class="row mb-1 position-relative">
           <label for="inputEmail" class="form-label text-start">이메일</label>
           <div class="input-group col">
             <input type="text" class="form-control input" id="inputEmail" required>
             <span style="padding: 5px;">&nbsp;@&nbsp;</span>
-            <select class="form-select input" id="inputEmailUrl">
-              <option selected>이메일 선택</option>
+            <select class="form-select input" id = "inputEmailUrl" >
+              <option value = "none" selected>이메일 선택</option>
               <option value="naver.com">naver.com</option>
+              <option value="daum.net">daum.net</option>
               <option value="kakao.com">kakao.com</option>
-              <option value="google.com">google.com</option>
+              <option value="gmail.com">gmail.com</option>
             </select>
-            <button class="btn id-check-btn custom-btn" onclick="email_check()">인증하기</button>
+            <input type="hidden" name="email" id="finalEmail">
+            <button class="btn id-check-btn custom-btn" type ="button" onclick="checkEmail()">인증하기</button>
             <div class="invalid-tooltip">이메일을 입력해주세요.</div>
           </div>
         </div>
-         <!--email input-->
+        
+         <!--email check input-->
         <div class="row mb-1 position-relative" id="divEmailCheck" style="display: none;">
           <label for="inputEmailCheck" class="form-label text-start">인증번호</label>
           <div class="input-group col">
-            <input type="text" class="form-control input" id="inputEmailCheck" required>
-            <button class="btn id-check-btn custom-btn">확인</button>
+            <input type="password" class="form-control input" id="inputEmailCheck" disabled>
+            <button class="btn id-check-btn custom-btn" type="button" onclick="checkEmailCheck()">확인</button>
             <div class="invalid-tooltip">인증번호를 입력해주세요.</div>
           </div>
         </div>
@@ -154,7 +165,7 @@
         <div class="row mb-3 position-relative">
           <label for="inputBirth" class="form-label text-start">생년월일</label>
           <div class="input-group col">
-            <input type="date" class="form-control input" id="inputBirth" required>
+            <input type="date" class="form-control input" id="inputBirth" name="date_birth" required>
             <div class="invalid-tooltip">생년월일을 선택해주세요.</div>
           </div>
         </div>
@@ -163,73 +174,36 @@
         <div class="row mb-3 position-relative">
           <label for="inputResidence" class="form-label text-start">주소</label>
           <div class="input-group col">
-            <input type="text" class="form-control input" id="inputResidence" required>
-            <button class="btn id-check-btn custom-btn">검색</button>
+            <input type="text" class="form-control input" id="inputResidence" name="residence" 
+            onclick="swal('주소를 검색해주세요', '검색을 통해 주소를 입력해주세요.', 'info');" required readonly>
+            <button class="btn id-check-btn custom-btn" type="button" onclick="searchResidence()">검색</button>
             <div class="invalid-tooltip">주소를 입력해주세요.</div>
           </div>
         </div>
 
         <!--회원가입 버튼-->
         <div class="mb-3 justify-content-center">
-          <button class="btn submit-btn custom-btn" type="submit" id="btn-login">회원가입</button>
+          <button class="btn submit-btn custom-btn" type="button" id="btn-login" onclick="submitForm()">회원가입</button>
         </div>
+        
       </form>
+      
       </div>
     </div>
     
    
   </div>
   <div th:include="./main/footer.html"></div>
+  
   <!-- Bootstrap JS (Popper.js and jQuery first, then Bootstrap) -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script>
-	 Kakao.init("805b5d2e52d8f6303fb372ca5efd7e30");
-	  function kakaoLogin(){
-		  Kakao.Auth.loginForm({
-			scope:"account_email, gender, birthday, profile_image",
-			success:function(){
-				Kakao.API.request({
-					url:"/v2/user/me",
-				}).then(function(data){
-					var userInfo = {email: data.kakao_account.email ,
-						birthday : data.kakao_account.birthday ,
-						gender : data.kakao_account.gender ,
-						image : data.kakao_account.profile.profile_image_url
-					}
-					
-					location.href = "";
-				}).catch(function(error){
-					console.log(error);
-				})
-			}
-	      });
-	  }
-	  
-	  
-	  window.addEventListener('load', () => {
-	      const forms = document.getElementsByClassName('validation-form');
-			
-	      Array.prototype.filter.call(forms, (form) => {
-	        form.addEventListener('submit', function (event) {
-	          if (form.checkValidity() === false) {
-	            event.preventDefault();
-	            event.stopPropagation();
-	            console.log('stop');
-	          }
-	          
-	          form.classList.add('was-validated');
-	
-	          form.classList.add('invalid-tooltip');
-	        }, false);
-	      });
-	    }, false);	
-    
-    
-  </script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+  <script src="/js/userinfo/signup.js"></script>
 </body>
 
 </html>
