[Wearth1.0] 7.31(월) 지영님 페이지 업로드, 서현님 기본세팅까지 [우종호]

--- a/src/main/resources/templates/shop/cart.html
+++ b/src/main/resources/templates/shop/cart.html
@@ -5,18 +5,14 @@
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+	<script src="js/shop/cart/cart.js"></script>
+	<link rel="stylesheet" href="css/shop/cart/cart.css" />
 	<link rel="" href="" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Colo Shop Template">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/css/main/style.css">
-	<link rel="stylesheet" href="/css/main/responsive.css">
-	<link rel="stylesheet" href="/css/main/custom.css">
-	<link rel="stylesheet" href="/css/main/sidebar.css">
-	<link rel="stylesheet" href="css/shop/cart/cart.css" />
-	<link rel="stylesheet" href="/css/styles.css">
-	<script src="css/shop/cart/cart.js"></script>
+
 </head>
 
 <body>
@@ -130,7 +126,7 @@
 
 		<!--주문버튼 start-->
 		<div class="pay">
-			<button class="pay-btn" onclick="window.location.href='/order'">주문하기</button> <br />
+			<button class="pay-btn">주문하기</button> <br />
 			<button class="pay-btn2">Npay 주문하기</button>
 		</div>
 		<!--주문버튼 end-->
