--- a/src/main/resources/templates/shop/detail.html
+++ b/src/main/resources/templates/shop/detail.html
@@ -50,11 +50,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Colo Shop Template">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/css/main/style.css">
-	<link rel="stylesheet" href="/css/main/responsive.css">
-	<link rel="stylesheet" href="/css/main/custom.css">
-	<link rel="stylesheet" href="/css/main/sidebar.css">
-	<link rel="stylesheet" href="/css/styles.css">
+
 	<link rel="stylesheet" type="text/css" href="css/shop/detail/styles/bootstrap4/bootstrap.min.css">
 	<link href="shop/detail/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/shop/detail/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
@@ -440,17 +436,17 @@
 	</div>
 
 	<!--footer-->
-	<div th:include="main/footer.html"></div>
-	<script src="css/shop/detail/js/jquery-3.2.1.min.js"></script>
-	<script src="css/shop/detail/js/single_custom.js"></script>
-	<script src="css/shop/detail/js/custom.js"></script>
-	<script src="css/shop/detail/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-	<script src="css/shop/detail/styles/bootstrap4/popper.js"></script>
-	<script src="css/shop/detail/styles/bootstrap4/bootstrap.min.js"></script>
-	<script src="css/shop/detail/plugins/Isotope/isotope.pkgd.min.js"></script>
+	<div th:include="/main/footer.html"></div>
+	<script src="/js/shop/detail/jquery-3.2.1.min.js"></script>
+	<script src="/js/shop/detail/single_custom.js"></script>
+	<script src="/js/shop/detail/custom.js"></script>
+	<script src="/js/shop/detail/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+	<script src="/js/shop/detail/popper.js"></script>
+	<script src="/js/shop/detail/bootstrap.min.js"></script>
+	<script src="/js/shop/detail/isotope.pkgd.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="css/shop/detail/plugins/easing/easing.js"></script>
-	<script src="css/shop/detail/plugins/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+	<script src="/js/shop/detail/easing.js"></script>
+	<script src="/js/shop/detail/jquery-ui.js"></script>
 </body>
 
 </html>
