--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -19,239 +19,181 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300&display=swap" rel="stylesheet">
 	<!--font end-->
-    <link rel="stylesheet" href="/css/main/sidebar.css">
 
 	<!-- Site Icons -->
-	<link rel="shortcut icon" href="main/images/favicon.ico" type="main/image/x-icon">
+	<link rel="shortcut icon" href="/css/main/images/favicon.ico" type="main/image/x-icon">
+
+	<link rel="stylesheet" href="/css/main/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/main/style.css">
+	<link rel="stylesheet" href="/css/main/responsive.css">
+	<link rel="stylesheet" href="/css/main/custom.css">
+	<link rel="stylesheet" href="/css/main/sidebar.css">
+	<link rel="stylesheet" href="/css/styles.css">
+
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 
 <body>
-	<!-- sidebar -->
-	<div  sec:authorize="isAuthenticated()" class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="sidebar" aria-labelledby="sidebar">
-	  <div class="offcanvas-header">
-	    <h3 class="offcanvas-title" id="offcanvasScrollingLabel">MyPage</h3>
-	    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-	  </div>
-	  <div class="offcanvas-body">
-	    <div class="card user-info text-center shadow">
-	        <div class="card-body">
-	          <div class="profile-box" >
-	            <img src="https://www.thechooeok.com/common/img/default_profile.png" class="card-img-top profile-img" alt="프로필">
-	          </div>
-	          <span th:text="${session.u.nickname}"></span><br>
-	          <button class="btn custom-btn mb-3" style="font-size: 13px;" onclick="window.location.href='/mypage/update'">개인정보 수정</button>
-				<table width="80%">
-					<tr>
-						<th>쿠폰</th>
-						<th>적립금</th>
-					</tr>
-					<tr>
-						<td>2 장</td>
-						<td th:text="${session.u.point}+'원'"></td>
-					</tr>
-				</table>
-	        </div>
-	      </div>
-	      
-	      <div class="detail-bar"> 
-			<ul class="nav flex-column">실천
-	          <li class="nav-item"><a class="nav-link" href="/mypage/act/list">봉사신청내역</a></li>
-	          <li class="nav-item"><a class="nav-link" href="">내가 쓴 글</a></li>
-	        </ul>
-			<ul class="nav flex-column">위얼스 학교
-	          <li class="nav-item"><a class="nav-link" href="/mypage/edu/list">신청내역</a></li>
-	          <li class="nav-item"><a class="nav-link" href="">관심 교육/강연</a></li>
-	        </ul>
-	        <ul class="nav flex-column">쇼핑
-	          <li class="nav-item"><a class="nav-link" href="/mypage/shopping/list">주문내역</a></li>
-	          <li class="nav-item"><a class="nav-link" href="">관심 상품</a></li>
-	        </ul>
-	        
-	      
-	      </div>
-	  </div>
-	</div>
 
-
-	<!-- Start Main Top -->
-	<header class="main-header">
-		<!-- Start Navigation -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-white navbar-default bootsnav ">
-			<div class="container">
-				<!-- Start Header Navigation -->
-				<div class="navbar-header">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu"
-						aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
-						<i class="fa fa-bars"></i>
-					</button>
-					<a class="navbar-brand" href="/"><img src="https://ifh.cc/g/TjraG8.png" class="logo" alt=""></a>
-				</div>
-				<!-- End Header Navigation -->
-
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="navbar-menu">
-					<ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-						<li class="nav-item"><a class="nav-link" href="/">소개</a></li>
-						<li class="account">
-							<a href="/act/actBoardMain">
-								실천하기
-								<i class="fa fa-angle-down"></i>
-							</a>
-							<ul class="account_selection">
-								<li><a href="/act/actBoardMain"><i class="fa fa-sign-in" aria-hidden="true"></i>실천하기</a>
-								</li>
-								<li><a href="/act/voluneteerMain"><i class="fa fa-sign-in" aria-hidden="true"></i>봉사</a>
-								</li>
-
-							</ul>
-						</li>
-
-						<li class="account">
-							<a href="/school/lecture/list">
-								위얼스학교
-								<i class="fa fa-angle-down"></i>
-							</a>
-							<ul class="account_selection">
-								<li><a href="/school/lecture/list"><i class="fa fa-sign-in"
-											aria-hidden="true"></i>강연</a></li>
-								<li><a href="/school/education/list"><i class="fa fa-sign-in"
-											aria-hidden="true"></i>찾아가는&nbsp;환경교육</a></li>
-								<li><a href="/school/trainingRequest/list"><i class="fa fa-sign-in"
-											aria-hidden="true"></i>강의 요청</a></li>
-
-							</ul>
-						</li>
-
-						<li class="account">
-							<a href="/shop/shopMain?no=1">
-								쇼핑하기
-								<i class="fa fa-angle-down"></i>
-							</a>
-							<ul class="account_selection">
-								<li><a href="/shop/shopMain?no=1"><i class="fa fa-sign-in" aria-hidden="true"></i>전체
-										상품</a></li>
-								<li><a href="/shop/shopMain?no=2"><i class="fa fa-sign-in" aria-hidden="true"></i>식품</a>
-								</li>
-								<li><a href="/shop/shopMain?no=3"><i class="fa fa-sign-in" aria-hidden="true"></i>리빙
-										용품</a></li>
-								<li><a href="/shop/shopMain?no=4"><i class="fa fa-sign-in" aria-hidden="true"></i>주방
-										용품</a></li>
-								<li><a href="/shop/shopMain?no=5"><i class="fa fa-sign-in" aria-hidden="true"></i>욕실
-										용품</a></li>
-								<li><a href="/shop/shopMain?no=6"><i class="fa fa-sign-in" aria-hidden="true"></i>선물
-										키트</a></li>
-
-							</ul>
-						</li>
-
-						<li class="nav-item"><a class="nav-link" href="/customerServiceMain">고객센터</a></li>
-					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
-				<!-- Start Atribute Navigation -->
-				<div class="attr-nav">
-					<ul sec:authorize="!isAuthenticated()">
-						<li class="nav-item"><a href="/userinfo/login"
-								style="font-size: 10pt; padding-right: 0px;">로그인</a> </li>
-						<li class="nav-item"><a href="#"
-								style="font-size: 10pt; padding-right: 0px;">|</a></liclass="nav-item">
-						<li class="nav-item"><a href="/userinfo/signup"
-								style="font-size: 10pt; padding-right: 0px;">회원가입</a></li>
-						<li class="nav-item"><a href="/cart">
-								<i class="fa fa-shopping-bag"></i>
-
-						</li>
-					</ul>
-					<ul sec:authorize="isAuthenticated()">
-						<li class="nav-item">
-						  <a style="font-size: 10pt; padding-right: 0px;" id="myPageLink">마이페이지</a>
-						</li>
-								
-						<li class="nav-item"><a href="#"
-								style="font-size: 10pt; padding-right: 0px;">|</a></liclass="nav-item">
-								
-						<li class="nav-item"><a href="/userinfo/logout"
-								style="font-size: 10pt; padding-right: 0px;">로그아웃</a></li>
-								
-						<li class="nav-item"><a href="/cart">
-								<i class="fa fa-shopping-bag"></i>
-
-						</li>
-					</ul>
-				</div>
-				<!-- End Atribute Navigation -->
-			</div>
-			<!-- Start Side Menu -->
-			<div class="side">
-				<a href="#" class="close-side"><i class="fa fa-times"></i></a>
-				<li class="cart-box">
-					<ul class="cart-list">
-						<li>
-							<a href="#" class="photo"><img src="images/img-pro-01.jpg" class="cart-thumb" alt="" /></a>
-							<h6><a href="#">Delica omtantur </a></h6>
-							<p>1x - <span class="price">$80.00</span></p>
-						</li>
-						<li>
-							<a href="#" class="photo"><img src="images/img-pro-02.jpg" class="cart-thumb" alt="" /></a>
-							<h6><a href="#">Omnes ocurreret</a></h6>
-							<p>1x - <span class="price">$60.00</span></p>
-						</li>
-						<li>
-							<a href="#" class="photo"><img src="images/img-pro-03.jpg" class="cart-thumb" alt="" /></a>
-							<h6><a href="#">Agam facilisis</a></h6>
-							<p>1x - <span class="price">$40.00</span></p>
-						</li>
-						<li class="total">
-							<a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
-							<span class="float-right"><strong>Total</strong>: $180.00</span>
-						</li>
-					</ul>
-				</li>
-			</div>
-			
-			<!-- End Side Menu -->
-		</nav>
-		<!-- End Navigation -->
-	</header>
-	<!-- End Main Top -->
-
-	<!-- Start Top Search -->
-	<div class="top-search">
+<!-- Start Main Top -->
+<header class="main-header">
+	<!-- Start Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-white navbar-default bootsnav ">
 		<div class="container">
-			<div class="input-group">
-				<span class="input-group-addon"><i class="fa fa-search"></i></span>
-				<input type="text" class="form-control" placeholder="Search">
-				<span class="input-group-addon close-search"><i class="fa fa-times"></i></span>
+			<!-- Start Header Navigation -->
+			<div class="navbar-header">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu"
+						aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
+					<i class="fa fa-bars"></i>
+				</button>
+				<a class="navbar-brand" href="/"><img src="/images/main/logo.png" class="logo" alt=""></a>
 			</div>
+			<!-- End Header Navigation -->
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="navbar-menu">
+				<ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
+					<li class="nav-item"><a class="nav-link" href="/">소개</a></li>
+					<li class="account">
+						<a href="/act/actBoardMain">
+							실천하기
+							<i class="fa fa-angle-down"></i>
+						</a>
+						<ul class="account_selection">
+							<li><a href="/act/actBoardMain"><i class="fa fa-sign-in" aria-hidden="true"></i>실천하기</a>
+							</li>
+							<li><a href="/act/voluneteerMain"><i class="fa fa-sign-in" aria-hidden="true"></i>봉사</a>
+							</li>
+
+						</ul>
+					</li>
+
+					<li class="account">
+						<a href="/school/lecture/list">
+							위얼스학교
+							<i class="fa fa-angle-down"></i>
+						</a>
+						<ul class="account_selection">
+							<li><a href="/school/lecture/list"><i class="fa fa-sign-in"
+																  aria-hidden="true"></i>강연</a></li>
+							<li><a href="/school/education/list"><i class="fa fa-sign-in"
+																	aria-hidden="true"></i>찾아가는&nbsp;환경교육</a></li>
+							<li><a href="/school/trainingRequest/list"><i class="fa fa-sign-in"
+																		  aria-hidden="true"></i>강의 요청</a></li>
+
+						</ul>
+					</li>
+
+					<li class="account">
+						<a href="/shop">
+							쇼핑하기
+							<i class="fa fa-angle-down"></i>
+						</a>
+						<ul class="account_selection">
+							<li><a href="/shop"><i class="fa fa-sign-in" aria-hidden="true"></i>전체
+								상품</a></li>
+							<li><a href="/shop/shopMain?categoryNo=2"><i class="fa fa-sign-in" aria-hidden="true"></i>식품</a>
+							</li>
+							<li><a href="/shop/shopMain?categoryNo=3"><i class="fa fa-sign-in" aria-hidden="true"></i>리빙
+								용품</a></li>
+							<li><a href="/shop/shopMain?categoryNo=4"><i class="fa fa-sign-in" aria-hidden="true"></i>주방
+								용품</a></li>
+							<li><a href="/shop/shopMain?categoryNo=5"><i class="fa fa-sign-in" aria-hidden="true"></i>욕실
+								용품</a></li>
+							<li><a href="/shop/shopMain?categoryNo=6"><i class="fa fa-sign-in" aria-hidden="true"></i>선물
+								키트</a></li>
+
+						</ul>
+					</li>
+
+					<li class="nav-item"><a class="nav-link" href="/customerServiceMain">고객센터</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+
+			<!-- Start Atribute Navigation -->
+			<div class="attr-nav">
+				<ul>
+					<li class="nav-item"><a href="/userinfo/login"
+											style="font-size: 10pt; padding-right: 0px;">로그인</a> </li>
+					<li class="nav-item"><a href="#"
+											style="font-size: 10pt; padding-right: 0px;">|</a></liclass="nav-item">
+					<li class="nav-item"><a href="/userinfo/signup"
+											style="font-size: 10pt; padding-right: 0px;">회원가입</a></li>
+					<li class="nav-item"><a href="/cart">
+						<i class="fa fa-shopping-bag"></i>
+
+					</li>
+				</ul>
+			</div>
+			<!-- End Atribute Navigation -->
+		</div>
+		<!-- Start Side Menu -->
+		<div class="side">
+			<a href="#" class="close-side"><i class="fa fa-times"></i></a>
+			<li class="cart-box">
+				<ul class="cart-list">
+					<li>
+						<a href="#" class="photo"><img src="images/img-pro-01.jpg" class="cart-thumb" alt="" /></a>
+						<h6><a href="#">Delica omtantur </a></h6>
+						<p>1x - <span class="price">$80.00</span></p>
+					</li>
+					<li>
+						<a href="#" class="photo"><img src="images/img-pro-02.jpg" class="cart-thumb" alt="" /></a>
+						<h6><a href="#">Omnes ocurreret</a></h6>
+						<p>1x - <span class="price">$60.00</span></p>
+					</li>
+					<li>
+						<a href="#" class="photo"><img src="images/img-pro-03.jpg" class="cart-thumb" alt="" /></a>
+						<h6><a href="#">Agam facilisis</a></h6>
+						<p>1x - <span class="price">$40.00</span></p>
+					</li>
+					<li class="total">
+						<a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
+						<span class="float-right"><strong>Total</strong>: $180.00</span>
+					</li>
+				</ul>
+			</li>
+		</div>
+		<!-- End Side Menu -->
+	</nav>
+	<!-- End Navigation -->
+</header>
+<!-- End Main Top -->
+
+<!-- Start Top Search -->
+<div class="top-search">
+	<div class="container">
+		<div class="input-group">
+			<span class="input-group-addon"><i class="fa fa-search"></i></span>
+			<input type="text" class="form-control" placeholder="Search">
+			<span class="input-group-addon close-search"><i class="fa fa-times"></i></span>
 		</div>
 	</div>
+</div>
 
-	<!-- End Top Search -->
-	<!-- ALL JS FILES -->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<!-- ALL PLUGINS -->
-	<script src="js/jquery.superslides.min.js"></script>
-	<script src="js/bootstrap-select.js"></script>
-	<script src="js/inewsticker.js"></script>
-	<script src="js/bootsnav.js."></script>
-	<script src="js/images-loded.min.js"></script>
-	<script src="js/isotope.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/baguetteBox.min.js"></script>
-	<script src="js/jquery-ui.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/form-validator.min.js"></script>
-	<script src="js/contact-form-script.js"></script>
-	<script src="js/custom.js"></script>
-	<script>
-		  document.getElementById('myPageLink').addEventListener('click', function() {
-		    var offcanvasElement = document.getElementById('sidebar');
-		    var offcanvas = new bootstrap.Offcanvas(offcanvasElement);
-		    offcanvas.show();
-		  });
-	</script>
+<!-- End Top Search -->
+<!-- ALL JS FILES -->
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- ALL PLUGINS -->
+<script src="js/jquery.superslides.min.js"></script>
+<script src="js/bootstrap-select.js"></script>
+<script src="js/inewsticker.js"></script>
+<script src="js/bootsnav.js."></script>
+<script src="js/images-loded.min.js"></script>
+<script src="js/isotope.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/baguetteBox.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/jquery.nicescroll.min.js"></script>
+<script src="js/form-validator.min.js"></script>
+<script src="js/contact-form-script.js"></script>
+<script src="js/custom.js"></script>
 </body>
 
 </html>
