--- a/src/main/resources/templates/shop/shopMain.html
+++ b/src/main/resources/templates/shop/shopMain.html
@@ -23,11 +23,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="css/shop/shopMain.css">
-	<link rel="stylesheet" href="/css/main/style.css">
-	<link rel="stylesheet" href="/css/main/responsive.css">
-	<link rel="stylesheet" href="/css/main/custom.css">
-	<link rel="stylesheet" href="/css/main/sidebar.css">
-	<link rel="stylesheet" href="/css/styles.css">
 	<!--캐러셀.css-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
@@ -38,7 +33,7 @@
 </head>
 
 <body>
-		<div th:include="main/header.html"></div>
+		<div th:include="/main/header.html"></div>
 	<div class="container">
 	
 
