--- a/src/main/resources/static/css/shop/cart/cart.css
+++ b/src/main/resources/static/css/shop/cart/cart.css
@@ -99,7 +99,7 @@ body {
 
 .order-tot{
 	margin-top: 30px;
-	height: 150;
+	height: 150px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -165,17 +165,17 @@ body {
 
 /*체크박스 start*/
 input[type='checkbox'] {
-  color: inherit;
-  appearance: none;
-  border: 1px solid currentColor;
-  border-radius: .25rem;
-  width: 1rem;
-  height: 1rem;
-  
-  &:checked {
-    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path d="m3.75 8.5 2.5 2.5 6-6" style="fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5"/></svg>')
-      no-repeat center/100%, currentColor;
-  }
+	color: inherit;
+	appearance: none;
+	border: 1px solid currentColor;
+	border-radius: .25rem;
+	width: 1rem;
+	height: 1rem;
+}
+
+input[type='checkbox']:checked {
+	background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path d="m3.75 8.5 2.5 2.5 6-6" style="fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5"/></svg>')
+	no-repeat center/100%, currentColor;
 }
 
 /* Not checkbox-relevant styles */
