userVO-setter,getter 수정 footer-width 조절

--- a/src/main/resources/static/css/main/style.css
+++ b/src/main/resources/static/css/main/style.css
@@ -770,6 +770,7 @@
      font-weight: 300;
      padding-right: 16px;
      line-height: 24px;
+     width : 390px;
 }
  .footer-link-contact ul li p a{
      color: gray;
