--- a/src/main/resources/templates/shop/detail.html
+++ b/src/main/resources/templates/shop/detail.html
@@ -299,7 +299,7 @@
 							d="M14 14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5V14zM4 1a1 1 0 0 0-1 1v10l2.224-2.224a.5.5 0 0 1 .61-.075L8 11l2.157-3.02a.5.5 0 0 1 .76-.063L13 10V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4z" />
 					</svg><button class="btn_photo">포토 구매평 모아보기</button>
 
-					<table class="table table-hover" style="width: 93%;">
+					<table class="table table-hover" style="width: 93%; margin:0px">
 						<tbody>
 							<tr class="clickable-row">
 								<td style="width: 70%;">
@@ -347,7 +347,7 @@
 					<span>상품 관련 문의 사항을 남겨주세요:)</span>
 					<!--modal start-->
 					<!-- 게시글 등록 버튼 -->
-					<div class="col d-grid gap-2 d-md-flex justify-content-md-end" >
+					<div class="col d-grid gap-2 d-md-flex justify-content-md-end" style="width: 93%;" >
 						<button type="button" class="custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" >작성하기</button>
 					</div>
 					<!-- 게시글 등록 양식 모달 -->
@@ -395,7 +395,7 @@
 
 					<!--modal end-->
 					<br />
-					<table class="table table-hover" style="width: 93%;">
+					<table class="table table-hover" style="width: 93%; margin:0px;">
 						<thead>
 							<tr>
 								<th>번호</th>
