--- a/src/main/resources/templates/userinfo/login.html
+++ b/src/main/resources/templates/userinfo/login.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+		
 	<div th:include="./main/header.html"></div>
 	<div class="container">
 
@@ -34,7 +35,8 @@
 
 			<div class="mb-3 justify-content-center row">
 				<img src="https://i.postimg.cc/gc760pLT/kakao.png" alt="kakao"
-					class="sns-logo img-responsive center-block col-sm-3" onclick="kakaoLogin()">
+					class="sns-logo img-responsive center-block col-sm-3"
+					onclick="window.location.href='https://kauth.kakao.com/oauth/authorize?client_id=29ba16db25cdb9eb61b39a437825310b&redirect_uri=http://localhost:8080/kakao/callback&response_type=code'">
 				<img src="https://i.postimg.cc/NfpG07nf/naver.png" alt="naver"
 					class="sns-logo img-responsive center-block col-sm-3">
 			</div>
@@ -44,7 +46,7 @@
 
 			<div class="row">
 				<!--로그인 form-->
-				<form class="needs-validation" action="/userinfo/login" method="post">
+				<form class="needs-validation" method="post" action="/userinfo/login">
 					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 					<div class="mb-3 row justify-content-center">
 						<label for="inputId" class="col-sm-3 col-form-label">아이디</label>
@@ -65,7 +67,7 @@
 						<button class="btn submit-btn custom-btn" type="submit" id="btn-login">로그인</button>
 					</div>
 				</form>
-				
+
 
 			</div>
 			<div>
