--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -79,7 +79,7 @@
 							<ul class="account_selection">
 								<li><a href="/school/lecture/list"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>강연</a></li>
-								<li><a href="/school/education/list"><i class="fa fa-sign-in"
+								<li><a href="/school/education/list/1"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>찾아가는&nbsp;환경교육</a></li>
 								<li><a href="/school/trainingRequest/list"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>강의 요청</a></li>
