--- a/src/main/resources/templates/school/education/insert.html
+++ b/src/main/resources/templates/school/education/insert.html
@@ -24,6 +24,14 @@
   		<h4 style="font-weight: bold;">상세정보</h4>
   	
   		 <table class="table insertDetail">
+			   <colgroup>
+			        <col style="width: 12%;">
+			        <col style="width: 40%;">
+			        <col style="width: 12%;">
+			        <col style="width: 12%;">
+			        <col style="width: 12%;">
+			        <col style="width: 12%;">
+			    </colgroup>
 	          <thead>
 	            <tr>
 	              <th>번호</th>
