--- a/src/main/resources/templates/school/lecture/detail.html
+++ b/src/main/resources/templates/school/lecture/detail.html
@@ -99,6 +99,19 @@
 	            </tr>
 	          </tfoot>
 	        </table>
+	        <br />
+	        <h3>지도</h3>
+		        <div id="map" style="width:100%;height:350px;"></div>
+					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9790c6888a563258e334542bc0c24a9"></script>
+					<script>
+						var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+						    mapOption = { 
+						        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+						        level: 3 // 지도의 확대 레벨
+						    };
+						// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+						var map = new kakao.maps.Map(mapContainer, mapOption); 
+					</script>
 			</div>
 			 </article>
 			 
@@ -122,14 +135,72 @@
 	        </article>
 			  
 			  
-			 <!-- 문의 -->
+			  <!-- 문의 -->
 			 <article class="blog-post">
 			  	<div id="opinion" class="content" style="display: none;">
 			    <br />
+			    <div class="row">
+			    <div class="col">
 			    <h2>강연문의</h2>
 			    <p>강연 관련 문의 사항을 남겨주세요:)</p>
+			    </div>
+			    
+			    <!-- 게시글 등록 버튼 -->
+			    <div class="col d-grid gap-2 d-md-flex justify-content-md-end">
+					<button type="button" class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" >게시글 등록</button>
+				</div>
+					<!-- 게시글 등록 양식 모달 -->
+					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					  <div class="modal-dialog">
+					    <div class="modal-content">
+					      <div class="modal-header">
+					        <h5 class="modal-title" id="exampleModalLabel">문의하기</h5>
+					        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					      </div>
+					      <div class="modal-body">
+					        <form>
+					          <div class="mb-3">
+					            <label for="recipient-name" class="col-form-label">제목</label>
+					            <input type="text" class="form-control" id="recipient-name" name="title">
+					          </div>
+					          <div class="mb-3">
+					            <label for="message-text" class="col-form-label">내용</label>
+					            <textarea class="form-control" id="message-text" name="content" style="height: 190px;"></textarea>
+					          </div>
+					          <div class="mb-3">
+							    <label for="formFileMultiple" class="col-form-label">첨부파일 </label>
+							    <input class="form-control" type="file" id="formFileMultiple">
+						  	  </div>
+						     <div class="form-check form-switch" id="secreat" style="margin:20px;">
+							  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+							  <label class="form-check-label" for="flexSwitchCheckDefault">비밀글</label>
+							</div>	
+							<div class="mb-3" id="mb-3" style="display: none;">
+							  <label for="pwd" class="col-form-label">비밀번호</label>
+							  <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
+							</div>					  	  
+					        </form>
+					      </div>
+					      <div class="modal-footer">
+					        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+					        <button type="button" class="btn custom-btn">등록</button>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+				
+				
+				</div>
+				
 			    <br />
+			    
 			    <table class="table table-hover">
+					<colgroup>
+				        <col style="width: 10%;">
+				        <col style="width: 50%;">
+				        <col style="width: 15%;">
+				        <col style="width: 15%;">
+				    </colgroup>
 			        <thead>
 			            <tr>
 			                <th>번호</th>
@@ -141,7 +212,7 @@
 			        <tbody>
 			            <tr data-toggle="collapse" data-target="#details1" class="clickable">
 			                <td>3</td>
-			                <td>강연 관련문의드립니다.</td>
+			                <td>강연관련문의드립니다.</td>
 			                <td>Doe</td>
 			                <td>2023-07-25</td>
 			            </tr>
@@ -149,13 +220,13 @@
 			                <td colspan="4" class="post-details">
 			                    <label for="password1">비밀번호를 입력하세요:</label>
 			                    <input type="password" id="password1" required>
-			                    <button onclick="checkPassword(1)"  class="btn custom-btn">확인</button>
+			                    <button onclick="checkPassword(1)" class="btn custom-btn">확인</button>
 			                    <br><br>
 			                    <div id="postContent1" style="display: none;">
-			                        안녕하세요 교육관련 해서 문의드려요~~ 이러쿵 저러쿵 롤로로롤롤ㄹ롤로라랄랄랄릴ㄹ라랄랄
+			                        안녕하세요 강연관련 해서 문의드려요~~ 이러쿵 저러쿵 롤로로롤롤ㄹ롤로라랄랄랄릴ㄹ라랄랄
 			                        <br><br>
 			                        [답변] <br>
-			                        안녕하세요 고갱님 ^^ 해당 교육은 최대 수용인원이 요렁쿵입니다. 더욱 자세한 정보를 듣고 싶으시다면 전화주세요~
+			                        안녕하세요 고갱님 ^^ 해당 강연은 최대 수용인원이 요렁쿵입니다. 더욱 자세한 정보를 듣고 싶으시다면 전화주세요~
 			                    </div>
 			                </td>
 			            </tr>
@@ -169,7 +240,7 @@
 			                <td colspan="4" class="post-details">
 			                    <label for="password2">비밀번호를 입력하세요:</label>
 			                    <input type="password" id="password2" required>
-			                    <button onclick="checkPassword(2)">확인</button>
+			                    <button onclick="checkPassword(2)" class="btn custom-btn">확인</button>
 			                    <br><br>
 			                    <div id="postContent2" style="display: none;">
 			                        안녕하세요 환불관련 해서 문의드려요~~ 이러쿵 저러쿵 롤로로롤롤ㄹ롤로라랄랄랄릴ㄹ라랄랄
@@ -189,7 +260,7 @@
 			                <td colspan="4" class="post-details">
 			                    <label for="password3">비밀번호를 입력하세요:</label>
 			                    <input type="password" id="password3" required>
-			                    <button onclick="checkPassword(3)">확인</button>
+			                    <button onclick="checkPassword(3)"  class="btn custom-btn">확인</button>
 			                    <br><br>
 			                    <div id="postContent3" style="display: none;">
 			                        안녕하세요 환불관련 해서 문의드려요~~ 이러쿵 저러쿵 롤로로롤롤ㄹ롤로라랄랄랄릴ㄹ라랄랄
@@ -211,17 +282,18 @@
 			  
 			<!-- 제목, 가격 --> 
 	        <div class="p-4 mb-3 bg-white rounded" style="border: 1px solid lightgrey;">
-	      		<h4 class="fst-basic">[모집중] 탄소 중립의 길
-				  <a href="#" onclick="changeImage('2')" style="margin-left: 210px;"><img id="2" src="/images/education/whiteHeart.jpg" width="28px"/></a>
-				</h4>
-	          <p class="mb-0" style="color: #43a06f; font-weight: bold;"> 10,000 원 </p>
+	      		<h4 class="fst-basic">[모집중] 탄소 중립의 길</h4>
+	          <div class="row">
+	          <div class="col"><p class="mb-0" style="color: #43a06f; font-weight: bold;"> 10,000 원 </p></div>
+	           <div class="col"><a href="#" onclick="changeImage('2')" style="margin-left: 100px;"><img id="2" src="/images/education/whiteHeart.jpg" style="width:28px;" /></a></div>
+	        </div>
 	        </div>
 	        
 	        <!-- 요약 --> 
 	        <div class="p-4">
 	          <ol class="list-unstyled mb-0">
 				<li style="font-weight: bold;">내용</li>
-	            <li>탄소 줄이기는 환경 보호와 지속 가능한 미래를 위해 매우 중요한 주제입니다. 탄소는 온실가스 중 하나인 이산화탄소(CO2)의 주요 구성 성분이며, 인간 활동으로 인해 대량으로 배출되고 있습니다. 이러한 탄소 배출은 지구 온난화와 기후 변화를 가속화시키고 있어서 우리 모두가 적극적으로 참여하여 탄소를 줄이는 노력이 필요합니다.</li>
+	            <li> 탄소 배출은 지구 온난화와 기후 변화를 가속화시키고 있어서 우리 모두가 적극적으로 참여하여 탄소를 줄이는 노력이 필요합니다.</li>
 				<li style="font-weight: bold;">날짜</li>	
 	            <li>2023년 7월 26일</li>
 	            <li style="font-weight: bold;">인원</li>
@@ -233,7 +305,7 @@
 	        
 	        <!-- 신청버튼 --> 
 			<div class="p-4">
-	       		<a class="btn custom-btn" style="width: 450px; " href="#">신청하기</a>
+	       		<a class="btn custom-btn" style="width: 320px; " href="#">신청하기</a>
 			</div>
 			
 	      </div>
@@ -245,7 +317,9 @@
 </div>
   <script src="/js/education/education.js"></script> 
   <script src="/js/education/detail.js"></script>  
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
  
