--- a/src/main/resources/templates/school/trainingRequest/list.html
+++ b/src/main/resources/templates/school/trainingRequest/list.html
@@ -46,6 +46,15 @@
 		</nav>
 					
 		  <table class="table table-hover">
+			  <colgroup>
+		        <col style="width: 5%;">
+		        <col style="width: 40%;">
+		        <col style="width: 10%;">
+		        <col style="width: 10%;">
+		        <col style="width: 12%;">
+		        <col style="width: 13%;">
+		        <col style="width: 10%;">
+		    </colgroup>
 		    <thead>
 		      <tr>
 		        <th>번호</th>
