shop_버튼 클릭 시 페이지 연결 및 상품조회 db연동[08/01 박지영]

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -88,12 +88,12 @@
 						</li>
 
 						<li class="account">
-							<a href="/shop">
+							<a href="/shop/shopMain">
 								쇼핑하기
 								<i class="fa fa-angle-down"></i>
 							</a>
 							<ul class="account_selection">
-								<li><a href="/shop"><i class="fa fa-sign-in" aria-hidden="true"></i>전체
+								<li><a href="/shop/shopMain"><i class="fa fa-sign-in" aria-hidden="true"></i>전체
 										상품</a></li>
 								<li><a href="/shop/shopMain?categoryNo=2"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>식품</a>
@@ -129,7 +129,7 @@
 								style="font-size: 10pt; padding-right: 0px;">|</a></liclass="nav-item">
 						<li class="nav-item"><a href="/userinfo/signup"
 								style="font-size: 10pt; padding-right: 0px;">회원가입</a></li>
-						<li class="nav-item"><a href="/cart">
+						<li class="nav-item"><a href="/shop/cart">
 								<i class="fa fa-shopping-bag"></i>
 
 						</li>
@@ -145,7 +145,7 @@
 						<li class="nav-item"><a href="/userinfo/logout"
 								style="font-size: 10pt; padding-right: 0px;">로그아웃</a></li>
 
-						<li class="nav-item"><a href="/cart">
+						<li class="nav-item"><a href="/shop/cart">
 								<i class="fa fa-shopping-bag"></i>
 
 						</li>
