--- a/src/main/resources/static/css/shop/shopMain.css
+++ b/src/main/resources/static/css/shop/shopMain.css
@@ -25,18 +25,29 @@
 	left: 50px;
 	margin:0px;
 }
-.card-body {
+.cardbody {
 	width: 100%;
-	height: 70px;
+	height: 30px;
 	display: flex;
 	text-align: center;
 	justify-content: space-between;
-	padding-top: 0px;
-	padding-bottom: 0px;
+	padding-left: 10%;
+	padding-right: 10%;
+	margin-bottom: 20px;
 }
 .card-text{
 	font-size: 14px;
+	padding-right: 10%;
+	text-align: start;
 }
+.card-start{
+	font-size: 14px;
+	padding-left: 10%;
+	padding-right: 10%;
+	text-align: start;
+	margin-top: 20px;
+	
+	}
 .card-bottom {
 	float: left;
 }
