--- a/src/main/resources/templates/shop/detail.html
+++ b/src/main/resources/templates/shop/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymleaf.org" lang="en">
 
 <head>
 	<title>Single Product</title>
@@ -51,15 +51,15 @@
 	<meta name="description" content="Colo Shop Template">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="css/shop/detail/styles/bootstrap4/bootstrap.min.css">
-	<link href="shop/detail/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="css/shop/detail/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
-	<link rel="stylesheet" type="text/css" href="css/shop/detail/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
-	<link rel="stylesheet" type="text/css" href="css/shop/detail/plugins/OwlCarousel2-2.2.1/animate.css">
-	<link rel="stylesheet" href="shop/detail/plugins/themify-icons/themify-icons.css">
-	<link rel="stylesheet" type="text/css" href="css/shop/detail/plugins/jquery-ui-1.12.1.custom/jquery-ui.css">
-	<link rel="stylesheet" type="text/css" href="css/shop/detail/styles/single_styles.css">
-	<link rel="stylesheet" type="text/css" href="css/shop/detail/styles/single_responsive.css">
+	<link rel="stylesheet" type="text/css" href="/css/shop/detail/styles/bootstrap4/bootstrap.min.css">
+	<link href="css/shop/detail/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="/css/shop/detail/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+	<link rel="stylesheet" type="text/css" href="/css/shop/detail/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
+	<link rel="stylesheet" type="text/css" href="/css/shop/detail/plugins/OwlCarousel2-2.2.1/animate.css">
+	<link rel="stylesheet" href="css/shop/detail/plugins/themify-icons/themify-icons.css">
+	<link rel="stylesheet" type="text/css" href="/css/shop/detail/plugins/jquery-ui-1.12.1.custom/jquery-ui.css">
+	<link rel="stylesheet" type="text/css" href="/css/shop/detail/styles/single_styles.css">
+	<link rel="stylesheet" type="text/css" href="/css/shop/detail/styles/single_responsive.css">
 
 	<!--carousel css/js-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -96,17 +96,15 @@
 					data-bs-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item">
-							<img width="600" height="490" src="css/shop/images/potatochip1.jpg"
-								preserveAspectRatio="xMidYMid slice" focusable="false" />
+							<img th:src="@{/css/shop/images/}+${g.mainFname}" width="600" height="490" preserveAspectRatio="xMidYMid slice" focusable="false" />
 							<rect width="100%" height="100%" fill="#555"></rect>
 						</div>
 						<div class="carousel-item active">
-							<img width="600" height="490" src="css/shop/images/potatochip1_2.jpg"
-								preserveAspectRatio="xMidYMid slice" focusable="false" />
+							<img  th:src="@{/css/shop/images/}+${g.addFname}" width="600" height="490" preserveAspectRatio="xMidYMid slice" focusable="false" />
 							<rect width="100%" height="100%" fill="#555"></rect>
 						</div>
 						<div class="carousel-item">
-							<img width="600" height="490" src="css/shop/images/potatochip1_3.jpg"
+							<img width="600" height="490" src="/css/shop/images/potatochip1_3.jpg"
 								preserveAspectRatio="xMidYMid slice" focusable="false" />
 							<rect width="100%" height="100%" fill="#555"></rect>
 						</div>
@@ -128,9 +126,9 @@
 				<div class="col-lg-5">
 					<div class="product_details">
 						<div class="product_details_title">
-							<h2>[소락]천연수세미세트</h2>
-							<div class="original_price">5000원</div>
-							<div class="product_price"> <span>20%</span> <span style="color: #58b483;">4000원</span>
+							<h2 > <span th:text="${g.goodsName}"></span></h2>
+							<div class="original_price" th:text="${g.goodsPrice}"></div>
+							<div class="product_price"> <span>20%</span> <span style="color: #58b483;" th:text="${g.goodsPrice}"></span>
 							</div>
 						</div>
 						<div class="free_delivery d-flex flex-row align-items-center justify-content-center">
@@ -138,11 +136,11 @@
 						</div>
 						<hr />
 						<div>
-							<span class="goodsInfo">원산지</span> 대한민국 <br>
-							<span class="goodsInfo">브랜드</span> 지구샵<br>
-							<span class="goodsInfo">구매혜택</span> 72포인트 적립예정<br>
+							<span class="goodsInfo">원산지</span> <span th:text="${g.origin}"></span> <br>
+							<span class="goodsInfo">브랜드</span> <span th:text="${g.goodsCompany}"></span> <br>
+							<span class="goodsInfo">구매혜택</span> <span th:text="${g.addPoint}"></span> <br>
 							<span class="goodsInfo">배송방법</span> 택배<br>
-							<span class="goodsInfo">배송비</span> 3000원(50,000원 이상 무료배송) | 도서산간 배송비 추가<br>
+							<span class="goodsInfo">배송비</span> <span th:text="${g.shipPrice}"></span> (50,000원 이상 무료배송) | 도서산간 배송비 추가<br>
 						</div>
 						<div class="product_color">
 							<span>Select Color:</span>
@@ -163,8 +161,8 @@
 						<div id="free_delivery d-flex flex-row align-items-center justify-content-center"
 							style="margin-top: 30px;">
 							<div style="justify-content: space-between; display: flex;">
-								<button id="btn_pay">구매하기</button>
-								<button id="btn_pay">장바구니</button>
+								<button id="btn_pay" onclick="location.href='/shop/order'">구매하기</button>
+								<button id="btn_pay" onclick="location.href='/shop/cart'">장바구니</button>
 							</div>
 							<button id="btn_pay2">Npay 구매하기</button>
 						</div>
@@ -199,7 +197,7 @@
 				<!--==============상세정보 div start=================-->
 				<div class="info">
 					<div class="tab_title">
-						<img src="css/shop/images/potatochip1Info.jpg" width="800px" height="100%" />
+						<img th:src="@{/css/shop/images/}+${g.infoFname}" width="800px" height="100%" />
 					</div>
 				</div>
 
