--- a/src/main/resources/templates/shop/shopMain.html
+++ b/src/main/resources/templates/shop/shopMain.html
@@ -22,7 +22,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="css/shop/shopMain.css">
+	<link rel="stylesheet" href="/css/shop/shopMain.css">
 	<!--캐러셀.css-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
@@ -41,13 +41,13 @@
 		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="css/shop/images/banner/banner3.png" class="d-block w-100">
+					<img src="/css/shop/images/banner/banner3.png" class="d-block w-100">
 				</div>
 				<div class="carousel-item">
-					<img src="css/shop/images/banner/banner2.png" class="d-block w-100" alt="...">
+					<img src="/css/shop/images/banner/banner2.png" class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="css/shop/images/banner/banner1.png" class="d-block w-100" alt="...">
+					<img src="/css/shop/images/banner/banner1.png" class="d-block w-100" alt="...">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -70,24 +70,27 @@
 				<div dir="rtl">
 					<select class="form-select" aria-label="Default select example"
 						style="width: 135px; height: 40px; text-align: center; margin-bottom: 30px;">
-						<option selected="">인기순</option>
-						<option value="1">등록일순</option>
-						<option value="2">가격낮은순</option>
-						<option value="3">가격높은순</option>
+						<option selected="sortBy">인기순</option>
+						<option value="goodsUpdate">등록일순</option>
+						<option value="price">가격낮은순</option>
+						<option value="price desc">가격높은순</option>
 					</select>
 				</div>
 				<!--select end-->
 
 				<!--goodsList start  -->
 				<div class="grid text-center" style="--bs-columns: 4;">
-					<div class="card">
-						<img class="card-img-top" src="css/shop/images/susemi1.jpeg" alt="Card image"
-							style="width: 100%">
-						<div class="card-body">
-							<span class="card-text">[소락] 천연 수세미</span>
+					
+					<div class="card" th:each="g:${list }">
+						<img class="card-img-top" th:src="@{/css/shop/images/}+${g.mainFname}" alt="Card image"
+							style="width: 100%; height:200px;" >
+						<div class="card-content">
+							<a th:href="@{/shop/detail(goodsNo=${g.goodsNo})}"><div class="card-start" th:text="[+${g.goodsCompany}+]+${g.goodsName}"> </div></a>
+							<div class="cardbody">
+							<span class="card-text" th:text="${g.goodsPrice}+원"></span>
 							<div class="card-bottom">
 								<div class="cart">
-									<a href="css/shop/cart"><svg xmlns="http://www.w3.org/2000/svg" width="20"
+									<a th:href="@{'/shop/cart/'+${g.goodsNo}}"><svg xmlns="http://www.w3.org/2000/svg" width="20"
 											height="20" fill="currentColor" style="cursor: pointer;"
 											class="bi bi-cart-check-fill" viewBox="0 0 16 16">
 											<path
@@ -102,79 +105,6 @@
 											d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
 									</svg>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<img class="card-img-top" src="css/shop/images/ehcokit1.jpg" alt="Card image"
-							style="width: 100%">
-						<div class="card-body">
-							<span class="card-text">[소락] 텀블러 키트</span>
-							<div class="card-bottom">
-								<div class="cart">
-									<a href="css/shop/cart"><svg xmlns="http://www.w3.org/2000/svg" width="20"
-											height="20" fill="currentColor" style="cursor: pointer;"
-											class="bi bi-cart-check-fill" viewBox="0 0 16 16">
-											<path
-												d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-1.646-7.646-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L8 8.293l2.646-2.647a.5.5 0 0 1 .708.708z" />
-										</svg></a>
-								</div>
-								<div class="like-button">
-									<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-										style="width: 10px; margin-top: -10px; font-weight: 900;" id="heart"
-										class="bi bi-heart" viewBox="0 0 16 16">
-										<path
-											d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-									</svg>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<img class="card-img-top" src="css/shop/images/hunters1.jpg" alt="Card image"
-							style="width: 100%">
-						<div class="card-body">
-							<span class="card-text">[헌터스] 블랙 트러플 감자칩</span>
-							<div class="card-bottom">
-								<div class="cart">
-									<a href="css/shop/cart"><svg xmlns="http://www.w3.org/2000/svg" width="20"
-											height="20" fill="currentColor" style="cursor: pointer;"
-											class="bi bi-cart-check-fill" viewBox="0 0 16 16">
-											<path
-												d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-1.646-7.646-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L8 8.293l2.646-2.647a.5.5 0 0 1 .708.708z" />
-										</svg></a>
-								</div>
-								<div class="like-button">
-									<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-										style="width: 10px; margin-top: -10px; font-weight: 900;" id="heart"
-										class="bi bi-heart" viewBox="0 0 16 16">
-										<path
-											d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-									</svg>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<img class="card-img-top" src="css/shop/images/mobil1.jpg" alt="Card image" style="width: 100%">
-						<div class="card-body">
-							<span class="card-text">[소락] 야자수모빌</span>
-							<div class="card-bottom">
-								<div class="cart">
-									<a href="css/shop/cart"><svg xmlns="http://www.w3.org/2000/svg" width="20"
-											height="20" fill="currentColor" style="cursor: pointer;"
-											class="bi bi-cart-check-fill" viewBox="0 0 16 16">
-											<path
-												d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-1.646-7.646-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L8 8.293l2.646-2.647a.5.5 0 0 1 .708.708z" />
-										</svg></a>
-								</div>
-								<div class="like-button">
-									<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-										style="width: 10px; margin-top: -10px; font-weight: 900;" id="heart"
-										class="bi bi-heart" viewBox="0 0 16 16">
-										<path
-											d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-									</svg>
 								</div>
 							</div>
 						</div>
